// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadMenu props :active 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`HeadMenu props :height 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`HeadMenu props :theme 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`HeadMenu slot <default> 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu">
      <div></div>
    </ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`HeadMenu slot <logo> 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo">
      <div></div>
    </div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`HeadMenu slot <options> 1`] = `
<div class="t-head-menu t-menu-mode__dropdown t-menu--light">
  <div class="t-head-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options">
      <div></div>
    </div>
  </div>
</div>
`;
